<resources>
    <string name="app_name">Outer Space</string>
    <string name="search_wiki">Search In Wiki</string>
    <string name="wiki_helper_text">Wiki Helper Text</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="to_screen_one">To Screen One</string>
    <string name="to_screen_two">To Screen Two</string>
    <string name="search">Search</string>
    <string name="select_app_theme">Select app theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="picture_of_2_days_ago">2 days ago</string>
    <string name="picture_of_yesterday">Yesterday</string>
    <string name="picture_of_today">Today</string>
    <string name="plantes">Plantes</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
</resources>